io.rook/manifests/rook-ceph-dashboard.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  entryPoints:                     # [1]
    - web
    - websecure
  routes:                          # [2]
  - kind: Rule
    match: Host(`rook.k8s.home`) # [3]
    services:                      # [8]
    - name: rook-ceph-mgr-dashboard
      port: 15626
